python/tests/unit/test_envoy_v3/globalcorstest/econf-aes.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "envoy.reloadable_features.ext_authz_http_service_enable_case_sensitive_string_matcher": false,
          "re2.max_program_size.error_level": 200
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8500_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8500,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8500_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_globalcorstest_http_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "globalcorstest-http",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_globalcorstest_http_default",
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "ambassador-listener-8080-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/.well-known/acme-challenge/"
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "prefix_rewrite": "/.well-known/acme-challenge/",
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/.ambassador/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.05c39b1e3391160319615ede25f8cca27d745b6c"
                                }
                              },
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/.ambassador/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.05c39b1e3391160319615ede25f8cca27d745b6c"
                                }
                              },
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/edge_stack/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.ab86de585a684254d5458bdeb01da4fba36c21cc"
                                }
                              },
                              "prefix_rewrite": "/edge_stack_ui/edge_stack/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/edge_stack/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              }
                            },
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.ab86de585a684254d5458bdeb01da4fba36c21cc"
                                }
                              },
                              "prefix_rewrite": "/edge_stack_ui/edge_stack/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.b4db12f5b638f1750062dd4220911c4f6f44fc57"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.b4db12f5b638f1750062dd4220911c4f6f44fc57"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.7df546235997704c909d473af2cbcb5e606d20de"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.7df546235997704c909d473af2cbcb5e606d20de"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.8de18501d2044fe30db225289b318d5fda913b64"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.8de18501d2044fe30db225289b318d5fda913b64"
                                }
                              },
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.3644d75eb336f323bec43e48d4cfd8a950157607"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/foo/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.3644d75eb336f323bec43e48d4cfd8a950157607"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.921ecb432880c4633171b07054553f9f567839ad"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/bar/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_globalcorstest_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_globalcorstest_http_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://bar.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.921ecb432880c4633171b07054553f9f567839ad"
                                }
                              },
                              "prefix_rewrite": "/",
                              "priority": null,
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              },
                              "safe_regex": {
                                "google_re2": {
                                  "max_program_size": 200
                                },
                                "regex": "^/$"
                              }
                            },
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.680a6fad8cb1cf2ad5fce0be9da026e1e0f1b76f"
                                }
                              },
                              "prefix_rewrite": "/edge_stack_ui/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8500_default"
                              },
                              "safe_regex": {
                                "google_re2": {
                                  "max_program_size": 200
                                },
                                "regex": "^/$"
                              }
                            },
                            "response_headers_to_add": [
                              {
                                "append": true,
                                "header": {
                                  "key": "x-content-type-options",
                                  "value": "nosniff"
                                }
                              }
                            ],
                            "route": {
                              "cluster": "cluster_127_0_0_1_8500_default",
                              "cors": {
                                "allow_methods": "POST, GET, OPTIONS",
                                "allow_origin_string_match": [
                                  {
                                    "exact": "http://foo.example.com"
                                  }
                                ],
                                "filter_enabled": {
                                  "default_value": {
                                    "denominator": "HUNDRED",
                                    "numerator": 100
                                  },
                                  "runtime_key": "routing.cors_enabled.680a6fad8cb1cf2ad5fce0be9da026e1e0f1b76f"
                                }
                              },
                              "prefix_rewrite": "/edge_stack_ui/",
                              "priority": null,
                              "timeout": "60.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_http",
                  "use_remote_address": true,
                  "xff_num_trusted_hops": 0
                }
              }
            ]
          }
        ],
        "listener_filters": [],
        "name": "ambassador-listener-8080",
        "traffic_direction": "UNSPECIFIED"
      }
    ]
  }
}
